--- a/Scenario Based Samples/Anonymoususer-UXUI/web-client/src/app/login/login.component.scss
+++ b/Scenario Based Samples/Anonymoususer-UXUI/web-client/src/app/login/login.component.scss
@@ -69,7 +69,8 @@
   left: 50%;
   transform: translateX(-50%);
   font-size: 14px;
-  white-space: nowrap; /* Prevents wrapping */
+  white-space: nowrap;
+  /* Prevents wrapping */
 }
 
 /* Optional: Center the form vertically and horizontally on the page */
@@ -302,6 +303,7 @@ ejs-radiobutton:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   position: relative;
 }
+
 .popup-content1 {
   background-color: #F2F2F2;
   width: 35%;
@@ -310,16 +312,6 @@ ejs-radiobutton:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   position: relative;
 }
-
-// .close-btn {
-//   position: absolute;
-//   top: 12px;
-//   right: 10px;
-//   background: none;
-//   border: none;
-//   font-size: 18px;
-//   cursor: pointer;
-// }
 
 .close-btn {
   position: absolute;
@@ -440,13 +432,16 @@ th {
   .table-container {
     max-height: 650px;
     overflow-y: auto;
-    border: 1px solid #ddd; /* Ensure border visibility */
+    border: 1px solid #ddd;
+    /* Ensure border visibility */
   }
 
   .heading {
     font-size: 35px;
   }
-  .paragraph, .error-message {
+
+  .paragraph,
+  .error-message {
     font-size: 20px;
   }
 
@@ -455,7 +450,7 @@ th {
   }
 
   .bolbilogo {
-    height: 50px; 
+    height: 50px;
     margin-left: 46%;
   }
 
@@ -463,7 +458,8 @@ th {
     height: 700px;
   }
 
-  .info-text, .child-div {
+  .info-text,
+  .child-div {
     border-radius: 16px;
     height: 700px;
   }
@@ -477,7 +473,11 @@ th {
     height: 91%;
   }
 
-  .login-bottombuttons, .login-subtext, .login-button, .access-button, .popup-paragraph {
+  .login-bottombuttons,
+  .login-subtext,
+  .login-button,
+  .access-button,
+  .popup-paragraph {
     font-size: 20px;
   }
 
@@ -520,7 +520,8 @@ th {
     height: 60px;
   }
 
-  .e-btn, .e-btn-group label {
+  .e-btn,
+  .e-btn-group label {
     padding: 15px;
     font-size: 16px;
   }
@@ -557,7 +558,8 @@ th {
     height: 500px;
   }
 
-  .info-text, .child-div {
+  .info-text,
+  .child-div {
     border-radius: 8px;
     height: 500px;
   }
@@ -571,7 +573,10 @@ th {
     height: 88.6%;
   }
 
-  .login-bottombuttons, .login-subtext, .login-button, .access-button {
+  .login-bottombuttons,
+  .login-subtext,
+  .login-button,
+  .access-button {
     font-size: 16px;
   }
 
@@ -587,7 +592,7 @@ th {
     font-size: 14px;
   }
 
-  .error-message{
+  .error-message {
     font-size: 16px;
     margin-top: 1%;
   }
@@ -613,17 +618,13 @@ th {
     font-size: 13px;
   }
 
-  // .dropdown-info-icon {
-  //   padding-top: 10px;
-  //   padding-left: 6px;
-  // }
-
   .e-btn-group {
     margin-left: 0px;
     height: 46px;
   }
 
-  .e-btn, .e-btn-group label {
+  .e-btn,
+  .e-btn-group label {
     padding: 8px 16px;
     font-size: 14px;
   }
@@ -659,12 +660,10 @@ th {
   text-align: center;
 }
 
-// .dropdown-info-icon:hover + .dropdown-info-content {
-//   display: block !important;
-// }
-
-child-div, .scrollable-table {
-  padding: 10px; /* Add padding for spacing */
+child-div,
+.scrollable-table {
+  padding: 10px;
+  /* Add padding for spacing */
 }
 
 .child-div {
@@ -694,7 +693,8 @@ child-div, .scrollable-table {
 }
 
 .login-subtext {
-  color: #555; /* Slightly muted text color */
+  color: #555;
+  /* Slightly muted text color */
   text-align: left;
 }
 
@@ -717,17 +717,18 @@ child-div, .scrollable-table {
 }
 
 .e-list-item.e-active {
-background-color: none;
+  background-color: none;
 }
+
 .group-header {
   height: 30px;
   font-weight: bold;
-  font-size: 14px; /* Reduced font size */
+  font-size: 14px;
+  /* Reduced font size */
   padding: 8px 12px;
-  //border-bottom: 1px solid #e0e0e0;
   color: #333;
- // text-transform: uppercase;
-  letter-spacing: 0.5px; /* Slightly reduced letter-spacing */
+  letter-spacing: 0.5px;
+  /* Slightly reduced letter-spacing */
 }
 
 .tenant-name {
@@ -738,28 +739,34 @@ background-color: none;
 }
 
 .empImage-frame {
-  width: 20px;  /* Frame width */
-  height: 20px; /* Frame height */
-  border-radius: 50%; /* Makes it circular */
-  overflow: hidden; /* Ensures the image stays inside the circular frame */
+  width: 20px;
+  /* Frame width */
+  height: 20px;
+  /* Frame height */
+  border-radius: 50%;
+  /* Makes it circular */
+  overflow: hidden;
+  /* Ensures the image stays inside the circular frame */
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #ddd; /* Background color for empty spaces */
- // margin: 5px 12px 5px 5px;
+  background-color: #ddd;
+  /* Background color for empty spaces */
 }
 
 .empImage {
-  width: 40px;  /* Stretched width */
-  height: 20px; /* Stretched height */
-  object-fit: cover; /* Ensures the image covers the defined area */
+  width: 40px;
+  /* Stretched width */
+  height: 20px;
+  /* Stretched height */
+  object-fit: cover;
+  /* Ensures the image covers the defined area */
 }
 
 .username {
   font-size: 16px;
   font-weight: 600;
   color: #333;
- // margin-bottom: 4px;
 }
 
 .structure-heading {
@@ -776,18 +783,22 @@ background-color: none;
 }
 
 .popup-text {
-  flex-grow: 1; /* Allows text to take up remaining space */
+  flex-grow: 1;
+  /* Allows text to take up remaining space */
   min-width: 200px;
-  white-space: nowrap; /* Prevents text from wrapping */
+  white-space: nowrap;
+  /* Prevents text from wrapping */
 }
 
 .e-btn-group {
   display: flex;
   padding-top: 1%;
-
-  background: #E5E5E5; /* Light gray background */
-  border-radius: 30px; /* Ensures full pill shape */
-  padding: 4px; /* Adds internal spacing */
+  background: #E5E5E5;
+  /* Light gray background */
+  border-radius: 30px;
+  /* Ensures full pill shape */
+  padding: 4px;
+  /* Adds internal spacing */
   width: fit-content;
 }
 
@@ -800,7 +811,8 @@ background-color: none;
 }
 
 .e-btn-group input {
-  display: none; /* Hide the radio inputs */
+  display: none;
+  /* Hide the radio inputs */
 }
 
 .e-btn-group label {
@@ -811,13 +823,14 @@ background-color: none;
   transition: background 0.3s ease;
 }
 
-.e-btn-group input:checked + label {
+.e-btn-group input:checked+label {
   background-color: #7F56D9;
   color: white;
-  border-radius: 30px !important; /* Ensures full-rounded shape */
+  border-radius: 30px !important;
+  /* Ensures full-rounded shape */
 }
 
-.value-container{
+.value-container {
   display: flex;
   align-items: center;
 }
